--- a/src/main/resources/static/fotos.html
+++ b/src/main/resources/static/fotos.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- Esto es un comentario... -->
+<!-- Practica 2 -->
 <html lang="es">
     <head>
         <title>Hotel Charlie´s</title>
         <meta charset="UTF-8"/>
-        <meta name="description" content="  Página de la semana 2, Web y patrones"/>
+        <meta name="description" content="Practica 2"/>
         <meta name="keywords" content="Charlie´s, hotel, alojamiento"/>
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
 
@@ -13,14 +13,15 @@
     <body>
         <header class="header">
             <nav class="nav">
-               <a class="logo nav-link" href="index.html">Charlie´s Resort</a> 
+               <a class="logo nav-link" href="index.html">Charlies</a> 
                <ul class="nav-menu">
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo6.html">&LeftTriangleBar;</a></li>  
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo2.html">&RightTriangleBar;</a></li>
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="audios.html">Fotos</a></li>
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="videos.html">Restaurantes</a></li>
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="iframe.html">Mapa</a></li>
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="formulario.html">Actividades</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="index.html">&LeftTriangleBar;</a></li>  
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="restint.html">&RightTriangleBar;</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="fotos.html">Fotos</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="restint.html">Restaurantes</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="mapa.html">Mapa</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="activ.html">Actividades</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="reserva.html">Reservación</a></li>
       
                </ul>
             </nav>
@@ -43,7 +44,7 @@
         </section>
         
         <footer class="footer">
-            Desarrollos Tecnológicos Coronado 2023 &COPY;
+            Charlie´s resort &COPY;
         </footer>
     </body>
 </html>
