--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,21 +4,22 @@
     <head>
         <title>Hotel Charlie´s</title>
         <meta charset="UTF-8">    
-        <meta name="description" content="  Practica 2"/>
+        <meta name="description" content="Practica 2"/>
         <meta name="keywords" content="Charlie´s, hotel, alojamiento"/>
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header class="header">
             <nav class="nav">
-               <a class="logo nav-link" href="index.html">Charlie´s Resort</a> 
+               <a class="logo nav-link" href="index.html">Charlies </a> 
                <ul class="nav-menu">
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo6.html">&LeftTriangleBar;</a></li>  
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo2.html">&RightTriangleBar;</a></li>
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="audios.html">Fotos</a></li>
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="videos.html">Restaurantes</a></li>
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="iframe.html">Mapa</a></li>
-                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="formulario.html">Actividades</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="index.html">&LeftTriangleBar;</a></li>  
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="fotos.html">&RightTriangleBar;</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="fotos.html">Fotos</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="restint.html">Restaurantes</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="mapa.html">Mapa</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="activ.html">Actividades</a></li>
+                   <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="reserva.html">Reservación</a></li>
       
                </ul>
             </nav>
